--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Claw Machine</title>
+	<link rel="icon" type="img/ico" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<canvas id="canvas" width="960" height="540"></canvas>
 
-
-	<script src="js/main.js"></script>
+	<script src="js/settings.js"></script>
+	<script src="js/machine.js"></script>
+	<script src="js/claw.js"></script>
+	<script src="js/bear.js"></script>
+	<script src="js/game.js"></script>
 </body>
 </html>
