--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<canvas id="canvas" width="960" height="540"></canvas>
 
 	<script src="js/settings.js"></script>
+	<script src="js/utilities.js"></script>
 	<script src="js/claw.js"></script>
 	<script src="js/machine.js"></script>
-	
 	<script src="js/bear.js"></script>
 	<script src="js/game.js"></script>
 </body>
