Ajout d'une pluie d'ours tous les 5 points atteints

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<canvas id="canvas" width="960" height="540"></canvas>
 
-	<script src="js/settings.js"></script>
+	<script src="js/setup.js"></script>
 	<script src="js/utilities.js"></script>
 	<script src="js/claw.js"></script>
 	<script src="js/machine.js"></script>
