add a how to play

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<div id="commands">
+		<h1>Commands</h1>
+		<p>Arrows keys: move the claw</p>
+		<p>Space bar: catch a bear</p>
+	</div>
 	<canvas id="canvas" width="960" height="540"></canvas>
 
 	<script src="js/setup.js"></script>
