controls div edited

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div id="commands">
-		<h1>Commands</h1>
+	<div id="controls">
+		<h1>Controls</h1>
 		<p>Arrows keys: move the claw</p>
 		<p>Space bar: catch a bear</p>
 	</div>
